--- a/home/templates/home/community_applicants.html
+++ b/home/templates/home/community_applicants.html
@@ -6,12 +6,86 @@ Review {{ community.name }} Applicants
 
 {% block content %}
 {% include "home/snippet/eligibility_prompts.html" %}
-<h1>Review {{ community.name }} Applicants</h1>
 
 {% with projects=participation.project_set.all %}
 	{% if not projects %}
+		<h1>Review {{ community.name }} Applicants</h1>
 		<p>Your community has no approved projects for the current round.</p>
 	{% else %}
+		<h1>Intern Selection for {{ community.name }}</h1>
+		<p>Outreachy intern selection happens in three steps:
+		<ol>
+			<li><strong>Deadline {{ current_round.InternSelectionDeadline }}</strong>: Mentors pick the applicant they want as an intern, rate the applicant, and sign a mentor agreement. Co-mentors must also sign the mentor agreeement. Mentors can select their interns on the project applicant details page (linked in the Projects column below).</li>
+			<li><strong>Deadline {{ current_round.coordinator_funding_deadline }}</strong>: Coordinators decide which interns will be funded from the available sponsorship funds, and which interns won't be funded. If the organization wants to accept more interns than they have sponsorship funds, the coordinator can mark the intern asking for Outreachy general funds.</li>
+			<li><strong>Deadline {{ current_round.InternConfirmationDeadline }}</strong>: Organizers review intern selections and general funding requests, and mark interns as approved or rejected. Organizers will follow up with intern sponsors to confirm funding sources.</li>
+		</ol></p>
+		<p>Interns will be announced on the <a href="/alums/">alums</a> page on {{ current_round.internannounce }} at 4pm UTC. Please keep internship selections private until that time.</p>
+
+		<form method="post">
+		{% csrf_token %}
+		<table class="table table-striped table-bordered" id="interns">
+			<thread class="thread-dark">
+			<tr>
+				<th scope="col">Project</th>
+				<th scope="col">Mentors</th>
+				<th scope="col">Intern Name</th>
+				<th scope="col">Funding Source</th>
+				<th scope="col">Organizer Approval Status</th>
+				<th scope="col">Applicant rating</th>
+				<th scope="col">Number of days available</th>
+				<th scope="col">Number of contributions</th>
+				<th scope="col">Applicant details</th>
+				<th scope="col">Applying to GSoC?</th>
+			</tr>
+			</thread>
+		{% for project in projects %}
+			{% with interns=project.get_interns %}
+				{% if not interns and project.approval_status == project.APPROVED %}
+				<tr>
+					<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">{{ project.short_title }}</a></td>
+					<td>{% if project.approval_status == project.APPROVED %}No selected interns{% else %} - {% endif %}</td>
+					<td> - </td>
+					<td> - </td>
+					<td> - </td>
+					<td> - </td>
+					<td> - </td>
+					<td> - </td>
+					<td> - </td>
+					<td> - </td>
+				</tr>
+				{% endif %}
+				{% for intern in interns %}
+					{% with tcs=intern.applicant.get_time_commitments applicant=intern.applicant application=intern.get_application %}
+						<tr>
+							<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">{{ project.short_title }}</a></td>
+							<td>{{ intern.mentor_names }}</td>
+							<td>{{ applicant.applicant.public_name }}</td>
+							<td>{{ intern.get_funding_source_display }}
+								{% if is_coordinator or is_staff %}
+								<div class="dropdown">
+									<button class="btn btn-secondary dropdown-toggle" type="button" id="InternFundingMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Intern Funding</button>
+									<div class="dropdown-menu" aria-labelledby="InternFundingMenu">
+										{% for choice in intern.FUNDING_CHOICES %}
+											<button class="dropdown-item" formaction="{% url 'intern-fund' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug applicant_username=intern.applicant.applicant.account.username funding=choice.0 %}">{{ choice.1 }}</button>
+										{% endfor %}
+									</div>
+								</div>
+								{% endif %}
+							</td>
+							<td>{% if intern.organizer_approval == None %}Undecided{% elif intern.organizer_approval == True %}Approved{% else %}Rejected{% endif %}</td>
+							<td>{{ application.get_rating_display }}</td>
+							<td>{{ tcs.longest_period_free }} / {{ tcs.internship_total_days.days }} days</td>
+							<td>{{ application.number_contributions }}</td>
+							<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}#{{ intern.applicant.applicant.pk }}">details</a></td>
+							<td>{% if application.applying_to_gsoc %}Yes{% else %} - {% endif %}</td>
+						</tr>
+					{% endwith %}
+				{% endfor %}
+			{% endwith %}
+		{% endfor %}
+		</table>
+		</form>
+		<h1>Review {{ community.name }} Applicants</h1>
 		<p>
 		In order for mentors to accept an applicant as an intern,
 		that applicant must record at least one contribution to the project
