--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -103,6 +103,24 @@ that timeline, taking into account any time commitments the applicant has.
 			</tbody>
 		</table>
 		</form>
+	{% elif project.has_application_deadline_passed %}
+		<div class="card border-warning mb-3">
+			<div class="card-header text-white bg-warning">No Interns Available</div>
+			<div class="card-body">
+				<p class="card-text">
+				None of the applicants for this project created an application, and your project's application deadline has passed. You cannot select an intern who has not created an application.
+				</p>
+				<p class="card-text">
+				{% if project.deadline != project.LATE %}
+					You can extend your project application deadline to {{ current_round.appslate }} at 4pm UTC by
+					<a href="{% url 'project-action' community_slug=project.project_round.community.slug project_slug=project.slug action='submit' %}">editing your project information</a>.
+					The application deadline is in a drop-down at the end of the first form.
+				{% else %}
+					The late project application deadline has passed, and it is not possible to extend your project application deadline.
+				{% endif %}
+				</p>
+			</div>
+		</div>
 	{% endif %}
 {% endwith %}
 
