Show intern selection conflicts in project and community applicant pages.
There's a permissions change now: approved mentors from approved
projects in approved communities can now see applicants detailed
application from other projects. This is required so that mentors can
see how much someone contributed to one project vs the other.

Fixes #177

--- a/home/templates/home/community_applicants.html
+++ b/home/templates/home/community_applicants.html
@@ -79,6 +79,15 @@ Review {{ community.name }} Applicants
 							<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}#{{ intern.applicant.applicant.pk }}">details</a></td>
 							<td>{% if application.applying_to_gsoc %}Yes{% else %} - {% endif %}</td>
 						</tr>
+						{% with conflicts=intern.get_intern_selection_conflicts %}
+						{% if conflicts %}
+							<tr>
+								<td colspan=10>
+									{% include 'home/snippet/intern_selection_conflict.html' %}
+								</td>
+							</tr>
+						{% endif %}
+						{% endwith %}
 					{% endwith %}
 				{% endfor %}
 			{% endwith %}
