--- a/home/templates/home/community_applicants.html
+++ b/home/templates/home/community_applicants.html
@@ -119,6 +119,7 @@ Review {{ community.name }} Applicants
 				<th scope="col">Project</th>
 				<th scope="col">Project Approval Status</th>
 				<th scope="col">Applicant Name</th>
+				<th scope="col">Selected by Another Project?</th>
 				<th scope="col">Number of days available</th>
 				<th scope="col">Number of contributions</th>
 				<th scope="col">Application status</th>
@@ -138,6 +139,7 @@ Review {{ community.name }} Applicants
 					<td> - </td>
 					<td> - </td>
 					<td> - </td>
+					<td> - </td>
 				</tr>
 				{% endif %}
 				{% for application in applicants %}
@@ -146,6 +148,18 @@ Review {{ community.name }} Applicants
 							<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">{{ project.short_title }}</a></td>
 							<td>{{ project.get_approval_status_display }}</td>
 							<td>{{ applicant.public_name }}</td>
+							<td>
+								{% with conflicts=application.get_intern_selection_conflicts %}
+								{% if conflicts %}
+								<ul>
+									{% for conflict in conflicts %}
+										<li>{{ conflict.project.project_round.community.name }}
+											<a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=conflict.project.project_round.community.slug project_slug=conflict.project.slug %}#{{ intern.applicant.applicant.pk }}">(details)</a>
+									{% endfor %}
+								</ul>
+								{% endif %}
+								{% endwith %}
+							</td>
 							<td>{{ tcs.longest_period_free }} / {{ tcs.internship_total_days.days }} days</td>
 							<td>{{ application.number_contributions }}</td>
 							<td>{% if application.submitted_application and not application.withdrew_application %}Submitted</td>
