--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -65,6 +65,15 @@ you can send an email to the announcements mailing list to remind applicants of 
 
 <p><a href="{% url 'email-mentor-application-deadline-reminder' %}"><input class="btn btn-success" value="Mentor Deadline Email 2" /></a>
 
+<p>Once the two project deadlines have passed, email mentors to remind them to select an intern:
+<ul>
+	<li>After the first application period deadline. Send the email on {{ current_round.appsclose }} after 4pm UTC.</li>
+	<li>After the second application period deadline. Send the email on {{ current_round.appslate }} after 4pm UTC.</li>
+</ul>
+</p>
+
+<p><a href="{% url 'email-mentor-intern-selection-reminder' %}"><input class="btn btn-success" value="Mentor Intern Selection Email" /></a>
+
 <h2>Community progress</h2>
 {% if pending_participations or approved_participations %}
 	<table class="table table-striped table-bordered">
