--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -234,7 +234,7 @@
 	{% endif %}
 
 	<p><a href="{{ c.url }}">{{ c.url }}</a></p>
-	<p>{{ c.description }}</p>
+	<pre>{{ c.description }}</pre>
 	{% if not forloop.last %}
 		<hr>
 	{% endif %}
