--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -74,6 +74,115 @@ you can send an email to the announcements mailing list to remind applicants of 
 
 <p><a href="{% url 'email-mentor-intern-selection-reminder' %}"><input class="btn btn-success" value="Mentor Intern Selection Email" /></a>
 
+<h2>Intern Selection</h2>
+
+<p>{{ current_round.get_intern_selections|length }} intern{{ current_round.get_intern_selections|pluralize:" has,s have" }} been selected by the Outreachy mentors:
+
+{% with approved_interns=current_round.get_approved_intern_selections rejected_interns=current_round.get_rejected_intern_selections pending_interns=current_round.get_pending_intern_selections %}
+<ul>
+	<li>{{ approved_interns|length }} intern{{ approved_interns|pluralize:" is,s are" }} approved by Outreachy Organizers.</li>
+	<li>{{ rejected_interns|length }} intern{{ rejected_interns|pluralize:" is,s are" }} rejected by Outreachy Organizers.</li>
+	<li>{{ pending_interns|length}} intern{{ pending_interns|pluralize:" is,s are" }} pending Outreachy Organizer approval{% if not pending_interns %}.{% else %}:
+		<ul>
+			{% for intern in pending_interns %}
+				<li>{{ intern.project.project_round.community.name }} "{{ intern.project.short_title }}":
+					<a href="#intern-{{ intern.project.slug }}-{{ intern.applicant.applicant.pk }}">details</a>
+				</li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+	</li>
+</ul></p>
+{% endwith %}
+
+{% with unused_funds=current_round.get_communities_with_unused_funding %}
+<p>{{ unused_funds|length }} communit{{ unused_funds|pluralize:"y has,ies have" }} unused funding{% if not unused_funds %}.{% else %}:
+<ul>
+	{% for community, intern_count, funded in unused_funds %}
+	<li><a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=community.slug %}">{{ community.name }}</a>: {{ intern_count }} of {{ funded }} funded intern{{ funded|pluralize }}</li>
+	{% endfor %}
+</ul>
+{% endif %}
+</p>
+{% endwith %}
+
+{% with general_interns=current_round.get_general_funding_intern_selections %}
+<p>{{ general_interns|length }} intern{{ general_interns|pluralize:" is,s are" }} marked for Outreachy general funding{% if not general_interns %}.{% else %}:
+<ul>
+	{% for intern in general_interns %}
+		<li>{{ intern.project.project_round.community.name }} "{{ intern.project.short_title }}":
+			<a href="#intern-{{ intern.project.slug }}-{{ intern.applicant.applicant.pk }}">details</a>
+		</li>
+	{% endfor %}
+</ul>
+{% endif %}
+</p>
+{% endwith %}
+
+{% if approved_participations %}
+{% with interns=current_round.get_intern_selections %}
+{% if interns %}
+	<form method="post">
+	{% csrf_token %}
+	<table class="table table-striped table-bordered">
+		<thread class="thread-dark">
+		<tr>
+			<th scope="col">Community</th>
+			<th scope="col">Org funded spots available</th>
+			<th scope="col">Intern Funding source</th>
+			<th scope="col">Organizer Approval Status</th>
+			<th scope="col">Project</th>
+			<th scope="col">Mentors</th>
+			<th scope="col">Intern Name</th>
+			<th scope="col">Applicant rating</th>
+			<th scope="col">Number of days available</th>
+			<th scope="col">Number of contribs</th>
+			<th scope="col">Applicant details</th>
+			<th scope="col">Applying to GSoC?</th>
+		</tr>
+		</thread>
+		{% for intern in interns %}
+			<tr id="intern-{{ intern.project.slug }}-{{ intern.applicant.applicant.pk }}">
+				<td><a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=intern.project.project_round.community.slug %}">{{ intern.project.project_round.community.name }}</a></td>
+				<td>{{ intern.project.project_round.interns_funded }}</td>
+				<td>{{ intern.get_funding_source_display }}</td>
+				<td>{% if intern.organizer_approved == True %}Approved by Organizers{% elif intern.organizer_approved == None %}Pending Organizer Review{% else %}Rejected by Organizers{% endif %}
+					<div class="dropdown">
+						<button class="btn btn-secondary dropdown-toggle" type="button" id="InternApprovalMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Intern Approval</button>
+						<div class="dropdown-menu" aria-labelledby="InternApprovalMenu">
+							<button class="dropdown-item" formaction="{% url 'intern-approval' round_slug=current_round.slug community_slug=intern.project.project_round.community.slug project_slug=intern.project.slug applicant_username=intern.applicant.applicant.account.username approval='Approved' %}">Approved</button>
+							<button class="dropdown-item" formaction="{% url 'intern-approval' round_slug=current_round.slug community_slug=intern.project.project_round.community.slug project_slug=intern.project.slug applicant_username=intern.applicant.applicant.account.username approval='Rejected' %}">Rejected</button>
+							<button class="dropdown-item" formaction="{% url 'intern-approval' round_slug=current_round.slug community_slug=intern.project.project_round.community.slug project_slug=intern.project.slug applicant_username=intern.applicant.applicant.account.username approval='Undecided' %}">Undecided</button>
+						</div>
+					</div>
+				</td>
+				<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=intern.project.project_round.community.slug project_slug=intern.project.slug %}">{{ intern.project.short_title }}</a></td>
+				<td>{{ intern.mentor_names }}</td>
+				{% with tcs=intern.applicant.get_time_commitments applicant=intern.applicant.applicant application=intern.get_application %}
+					<td>{{ applicant.public_name }}</td>
+					<td>{{ application.get_rating_display }}</td>
+					<td>{{ tcs.longest_period_free }} / {{ tcs.internship_total_days.days }} days</td>
+					<td>{{ application.number_contributions }}</td>
+					<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=intern.project.project_round.community.slug project_slug=intern.project.slug %}#{{ intern.applicant.applicant.pk }}">details</a></td>
+					<td>{% if application.applying_to_gsoc %}Yes{% else %} - {% endif %}</td>
+			</tr>
+				{% with conflicts=intern.get_intern_selection_conflicts project=intern.project %}
+				{% if conflicts %}
+					<tr>
+						<td colspan=12>
+							{% include 'home/snippet/intern_selection_conflict.html' %}
+						</td>
+					</tr>
+				{% endif %}
+				{% endwith %}
+			{% endwith %}
+		{% endfor %}
+	</table>
+	</form>
+{% endif %}
+{% endwith %}
+{% endif %}
+
 <h2>Community progress</h2>
 {% if pending_participations or approved_participations %}
 	<table class="table table-striped table-bordered">
