--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -159,7 +159,7 @@ you can send an email to the announcements mailing list to remind applicants of 
 				<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=intern.project.project_round.community.slug project_slug=intern.project.slug %}">{{ intern.project.short_title }}</a></td>
 				<td>{{ intern.mentor_names }}</td>
 				{% with tcs=intern.applicant.get_time_commitments applicant=intern.applicant.applicant application=intern.get_application %}
-					<td>{{ applicant.public_name }}</td>
+					<td><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=intern.project.project_round.community.slug project_slug=intern.project.slug %}#{{ applicant.pk }}">{{ applicant.public_name }}</a></td>
 					<td>{{ application.get_rating_display }}</td>
 					<td>{{ tcs.longest_period_free }} / {{ tcs.internship_total_days.days }} days</td>
 					<td>{{ application.number_contributions }}</td>
