--- a/home/templates/home/blocks/logo.html
+++ b/home/templates/home/blocks/logo.html
@@ -1,2 +1,2 @@
 {% load wagtailimages_tags %}
-<center>{% image value max-200x200 style="padding-top:20px; padding-left:30px;" %}</center>
+<center>{% image value max-200x200 style="margin-top:20px; margin-left:30px;" %}</center>
