Use intern approval deadline in model instead of hard-coding it

--- a/home/templates/home/community_applicants.html
+++ b/home/templates/home/community_applicants.html
@@ -17,7 +17,7 @@ Review {{ community.name }} Applicants
 		<ol>
 			<li><strong>Deadline {{ current_round.InternSelectionDeadline }}</strong>: Mentors pick the applicant they want as an intern, rate the applicant, and sign a mentor agreement. Co-mentors must also sign the mentor agreeement. Mentors can select their interns on the project applicant details page (linked in the Projects column below).</li>
 			<li><strong>Deadline {{ current_round.coordinator_funding_deadline }}</strong>: Coordinators decide which interns will be funded from the available sponsorship funds, and which interns won't be funded. If the organization wants to accept more interns than they have sponsorship funds, the coordinator can mark the intern asking for Outreachy general funds. This community has sponsors who will fund up to {{ participation.interns_funded }} interns.</li>
-			<li><strong>Deadline {{ current_round.InternConfirmationDeadline }}</strong>: Organizers review intern selections and general funding requests, and mark interns as approved or rejected. Organizers will follow up with intern sponsors to confirm funding sources.</li>
+			<li><strong>Deadline {{ current_round.internapproval }}</strong>: Organizers review intern selections and general funding requests, and mark interns as approved or rejected. Organizers will follow up with intern sponsors to confirm funding sources.</li>
 		</ol></p>
 		<p>Interns will be announced on the <a href="/alums/">alums</a> page on {{ current_round.internannounce }} at 4pm UTC. Please keep internship selections private until that time.</p>
 
